# 7-romans

./: .gitignore  README.md  data.py  extract_conll.py  format_results.py  measures.py  ner.py  pyproject.toml  requirements.txt  upload_alias_resolution_hgdataset.py  upload_hgdataset.py  upload_ner_hgdataset.py  utils.py  xp_main.py  xp_main.sh  xp_main_large.sh  xp_train.py  xp_train.sh
alias-resolution/: BelAmi.csv  EugénieGrandet.csv  Germinal.csv  LeRougeEtLeNoir.csv  LesTroisMousquetaires.csv  MadameBovary.csv  NotreDameDeParis.csv
ner/: BelAmi.conll  EugénieGrandet.conll  Germinal.conll  LeRougeEtLeNoir.conll  LesTroisMousquetaires.conll  MadameBovary.conll  NotreDameDeParis.conll
