[project]
name = "7romans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "accelerate>=0.26.0",
    "protobuf>=5.29.2",
    "pydantic>=2.9.2",
    "renard-pipeline",
    "setuptools>=75.3.0",
    "tiktoken>=0.7.0",
]

[tool.uv.sources]
renard-pipeline = { git = "https://github.com/CompNet/Renard", rev = "a7d39578d2e1f7e30c253331152c3eee7efe732e" }
