[project]
name = "7romans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "accelerate>=0.26.0",
    "protobuf>=5.29.2",
    "pydantic>=2.9.2",
    "renard-pipeline",
    "seqeval>=1.2.2",
    "setuptools>=75.3.0",
    "tiktoken>=0.7.0",
]

[tool.uv.sources]
renard-pipeline = { git = "https://github.com/CompNet/Renard", rev = "b3e1722eb53831bda2e277c73e584168eddf3bbc" }
